# JadeMatrix-CMake-Modules

./: CMakeLists.txt  JadeMatrix-CMake-ModulesConfig.cmake  JadeMatrix-CMake-ModulesConfigVersion.cmake.in
CMakeModules/JadeMatrix-CMake-Modules/: FindScripts.cmake
CMakeModules/JadeMatrix-CMake-Modules/Find/: FindInkscape.cmake  Findsimd.cmake
CMakeModules/JadeMatrix-CMake-Modules/Util/: AddCompileTest.cmake  AddDependency.cmake  CompileWarnings.cmake  Inkscape.cmake  TargetUtilities.cmake
